--- a/DZ 10/10index.html
+++ b/DZ 10/10index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DZ-10</title>
     <link rel="stylesheet" href="10style.css">
-    <link rel="stylesheet" href="norm.css.css">
+    <link rel="stylesheet" href="norm.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400&display=swap" rel="stylesheet">
 </head>
 <body>
