--- a/DZ 10/10index.html
+++ b/DZ 10/10index.html
@@ -48,7 +48,7 @@
             <section class="banner">
                 <div class="container">
                     <div class="titl">
-                        <p class="title__subtitle">Creative Template</p>
+                        <h3 class="title__subtitle">Creative Template</h3>
                         <h1 class="title__text">Welcome <br> To MoGo</h1>
                         <button class="title__btn">Learn more</button>
                     </div>
@@ -57,7 +57,7 @@
             <section class="section">
                 <div class="container">
                     <div class="services">
-                        <p class="services__subtitle">We work with</p>
+                        <h4 class="services__subtitle">We work with</h4>
                         <h3 class="services__text">Amazing Services</h3>
                     </div>
                     <ul class="service">
@@ -141,8 +141,8 @@
                             </div>
                             <div class="card-footer">
                                 <h4 class="card-footer__feat">
-                                    <a href="" class="card-footer__link">Matthew Dix</a>
-                                    <p class="card-footer__pe">Graphic Design</p>
+                                    <div class="card-footer__link">Matthew Dix</div>
+                                    <span class="card-footer__pe">Graphic Design</span>
                                 </h4>
                             </div>
                         </li>
@@ -179,8 +179,8 @@
                             </div>
                             <div class="card-footer">
                                 <h4 class="card-footer__feat">
-                                    <a href="" class="card-footer__link">Christopher Campbell</a>
-                                    <p class="card-footer__pe">Branding/UX design</p>
+                                    <div class="card-footer__link">Christopher Campbell</div>
+                                    <span class="card-footer__pe">Branding/UX design</span>
                                 </h4>
                             </div>
                         </li>
@@ -217,8 +217,8 @@
                             </div>
                             <div class="card-footer">
                                 <h4 class="card-footer__feat">
-                                    <a href="" class="card-footer__link">Michael Fertig </a>
-                                    <p class="card-footer__pe">Developer</p>
+                                    <div class="card-footer__link">Michael Fertig </div>
+                                    <span class="card-footer__pe">Developer</span>
                                 </h4>
                             </div>
                         </li>
